# rust-icu

./: .travis.yml  README.md  makefile.cargo
icu-sys/: Cargo.toml  build.rs  makefile.cargo
icu-sys/src/: lib.rs  uchar.rs  uscript.rs
